--- a/src/app/coin/coin.component.html
+++ b/src/app/coin/coin.component.html
@@ -1,3 +1,8 @@
+<nav class="nav-layout">
+  <a routerLink="/coin">to Coin</a>
+  <a routerLink="/normal">to normal</a>
+  <a routerLink="/pendulum">to pendulum</a>
+</nav>
 <div class="coin-wrapper">
   <canvas id="coinCanvas"></canvas>
 </div>
