--- a/src/app/normal/normal.component.html
+++ b/src/app/normal/normal.component.html
@@ -3,6 +3,7 @@
   <a routerLink="/normal">to normal</a>
   <a routerLink="/pendulum">to pendulum</a>
 </nav>
-<div>
-  <canvas id="pendulumCanvas"></canvas>
-</div>
+<p>
+  normal works!
+</p>
+<div>Muda Muda Muda!!!!!!!!!!!!!!!!!!!</div>
