--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,17 @@
 <!-- <app-coin></app-coin> -->
-<app-pendulum></app-pendulum>
+<!-- <app-pendulum></app-pendulum> -->
+<!-- <div #dragArea class="dragArea">
+    <div #dragPoint class="dragPoint">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+        <g stroke-linejoin="round" stroke-linecap="round" stroke="white" stroke-width="5" fill="none">
+            <circle r="36" cx="50" cy="50" />
+            <polyline id="caret" points="40 30, 65 50, 40 70" ></polyline>
+        </g>
+    </svg>
+    </div>
+</div> -->
+
+
+<main>
+    <router-outlet></router-outlet>
+</main>
