--- a/src/app/coin/coin.component.html
+++ b/src/app/coin/coin.component.html
@@ -3,6 +3,6 @@
   <a routerLink="/normal">to normal</a>
   <a routerLink="/pendulum">to pendulum</a>
 </nav>
-<div class="coin-wrapper">
+<div>
   <canvas id="coinCanvas"></canvas>
 </div>
