--- a/src/app/normal/normal.component.html
+++ b/src/app/normal/normal.component.html
@@ -1,9 +1,9 @@
-<nav class="nav-layout">
-  <a routerLink="/coin">to Coin</a>
-  <a routerLink="/normal">to normal</a>
-  <a routerLink="/pendulum">to pendulum</a>
-</nav>
-<p>
-  normal works!
-</p>
-<div>Muda Muda Muda!!!!!!!!!!!!!!!!!!!</div>
+<div class="layout-intro">
+  <div class="intro">
+      <h1>binbou</h1>
+      <h2>Present</h2>
+      <p>Some introduction about this website using THREEJS and CANNONJS
+        <br>Yeah yeah yeah, bla bla bla, thing and stuff
+      </p>
+  </div>
+</div>
