--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,3 +20,78 @@
     justify-content: center;
     
 }
+.layout-page{
+    position: relative;
+}
+.layout-btn{
+    position: absolute;
+    left: 50%;
+    top: 75%;
+    margin: -37.5px 0 0 -90px;
+}
+
+.container-btn{
+    font-weight: 600;
+    display: inline-block;
+    border-radius: 7px;
+    cursor: pointer;
+    width: 180px;
+    height: 50px;
+    a{
+        text-decoration: none;
+        color: #05182A;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2rem;
+        border-radius: 4px;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        top:-4px;
+    }
+    &:active {
+        a{
+            transform: translateY(4px);
+        }
+    }
+}
+.btn-anim{
+    animation: btn-in 1 .4s linear backwards;
+}
+.btn-red{
+    background: rgb(247, 68, 48);
+    a{
+        background: #FB513D;
+    }
+}
+.btn-purple{
+    background: rgb(168, 106, 192);
+    a{
+        background: #B381C7;
+    }
+}
+.btn-blue{
+    background: rgb(104, 141, 151);
+    a{
+        background: rgb(132, 202, 221);
+    }
+}
+@keyframes btn-in{
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+    50%{
+        opacity: 0.8;
+        transform: scale(1.1);
+    }
+    80%{
+        opacity: 1;
+        transform: scale(0.89);
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
