--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
     <div class="layout-page">
         <router-outlet></router-outlet>
         <div class="layout-btn">
-            <div class="container-btn" [ngClass]="getBtnColor()" >
-                <a [routerLink]="getNextLink()" [innerHtml]="getLinkText()"></a>
+            <div class="container-btn" [ngClass]="btnColor" >
+                <a [routerLink]="nextLink">{{linkText}}</a>
             </div>
         </div>
     </div>
