--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,4 +20,7 @@
             </div>
         </div>
     </div>
+    <div class="mobile">
+        <p>Please rotate your mobile device</p>
+    </div>
 </main>
