--- a/src/app/normal/normal.component.html
+++ b/src/app/normal/normal.component.html
@@ -2,8 +2,9 @@
   <div class="intro">
       <h1>binbou</h1>
       <h2>Present</h2>
-      <p>Some introduction about this website using THREEJS and CANNONJS
-        <br>Yeah yeah yeah, bla bla bla, thing and stuff
-      </p>
+      <div>
+        <p>You are going to experience some simple 3D web.</p>
+        <p>Hope you enjoy</p>
+      </div>
   </div>
 </div>
