--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -59,7 +59,7 @@
   }
 }
 .btn-anim {
-  animation: btn-in 1 0.4s linear backwards;
+  animation: btn-in 0.6s 1s linear backwards;
 }
 .btn-red {
   background: rgb(247, 68, 48);
@@ -122,4 +122,9 @@
     opacity: 1;
     transform: scale(1);
   }
+}
+.hamburger {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
