init branch merge scene

--- a/src/app/pen-module/pendulum/pendulum.component.html
+++ b/src/app/pen-module/pendulum/pendulum.component.html
@@ -1,1 +1,2 @@
-<canvas id="pendulumCanvas"></canvas>
+<canvas id="theCanvas"></canvas>
+<button type="button" (click)="switchScene()">Switch scene</button>
