--- a/src/app/pen-module/pendulum/pendulum.component.scss
+++ b/src/app/pen-module/pendulum/pendulum.component.scss
@@ -1,4 +1,10 @@
 canvas {
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 100vh;
+}
+button {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translate(-50%, -10%);
 }
