--- a/src/app/pen-module/pendulum/pendulum.component.html
+++ b/src/app/pen-module/pendulum/pendulum.component.html
@@ -1,2 +1,10 @@
 <canvas id="theCanvas"></canvas>
-<button type="button" (click)="switchScene()">Switch scene</button>
+<div class="button-layout">
+  <button type="button" class="hold_trigger" #holdBtn>
+    <span>Switch<br />scene</span>
+    <svg class="spinner" #spinner>
+      <circle id="shape" cx="75" cy="75" r="73" stroke-dasharray="720" />
+    </svg>
+  </button>
+</div>
+<!-- <div #switch class="nav-layout"></div> -->
