--- a/src/app/pen-module/pendulum/pendulum.component.scss
+++ b/src/app/pen-module/pendulum/pendulum.component.scss
@@ -2,9 +2,44 @@ canvas {
   width: 100%;
   height: 100vh;
 }
-button {
+.button-layout {
   position: absolute;
   bottom: 10%;
   left: 50%;
   transform: translate(-50%, -10%);
+  @media screen and (orientation: landscape) and (max-width: 850px) {
+    bottom: 5%;
+    transform: scale(0.5) translate(-100%, -10%);
+  }
+}
+button {
+  background: none repeat scroll 0 0 #cb4e4e;
+  border-radius: 50%;
+  color: #ffffff;
+  width: 150px;
+  height: 150px;
+  border: 0px;
+  cursor: pointer;
+  position: relative;
+  font-size: 25px;
+  padding: 0;
+  margin: 0 auto;
+  display: block;
+  z-index: 5;
+}
+
+.spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /*   border-radius:50%; */
+  z-index: 1;
+}
+
+#shape {
+  fill: none;
+  stroke: white;
+  stroke-width: 4;
 }
