--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -77,32 +77,32 @@
 //     }
 // }
 
-// .mobile{
-//     display: block;
-//     position: absolute;
-//     z-index: 5;
-//     width: 100%;
-//     height: 100%;
-//     background: #000;
-//     opacity: 0.9;
-//     top: 0;
-//     left: 0;
+.mobile{
+    display: block;
+    position: absolute;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.9;
+    top: 0;
+    left: 0;
 
-//     p{
-//         position: absolute;
-//         color: #ffffff;
-//         font-size: 2rem;
-//         top: 50%;
-//         left: 50%;
-//         transform: translate(-50%,-20%);
-//         margin: 0;
-//         width: 90%;
-//     }
-//     @media (orientation:landscape) {
-//         display: none;
-//     }
+    p{
+        position: absolute;
+        color: #ffffff;
+        font-size: 2rem;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-20%);
+        margin: 0;
+        width: 90%;
+    }
+    @media (orientation:landscape) {
+        display: none;
+    }
 
-// }
+}
 // @keyframes btn-in{
 //     0% {
 //         opacity: 0;
