--- a/src/app/pen-module/pendulum/pendulum.component.html
+++ b/src/app/pen-module/pendulum/pendulum.component.html
@@ -1,3 +1,4 @@
+<div class="cursor"></div>
 <canvas id="theCanvas"></canvas>
 <div class="button-layout">
   <button type="button" class="hold_trigger" #holdBtn>
