--- a/src/app/pen-module/pendulum/pendulum.component.scss
+++ b/src/app/pen-module/pendulum/pendulum.component.scss
@@ -1,7 +1,45 @@
 canvas {
   width: 100%;
   height: 100vh;
+  cursor: none !important;
 }
+.cursor {
+  position: absolute;
+  width: 44px;
+  height: 44px;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  border: 2px solid white;
+  border-radius: 50%;
+  z-index: 10;
+  &::after {
+    content: "";
+    pointer-events: none;
+    width: 8px;
+    height: 8px;
+    background-size: 8px 8px;
+    position: absolute;
+    border-radius: 50%;
+    background-color: white;
+    top: 18px;
+    left: 18px;
+  }
+}
+
+.on-mousedown {
+  animation: MouseDown 0.3s forwards;
+  &::after {
+    animation: DotExpand 0.3s forwards;
+  }
+}
+.on-mouseup {
+  animation: MouseUp 0.3s forwards;
+  &::after {
+    animation: DotShrink 0.3s forwards;
+  }
+}
+
 .button-layout {
   position: absolute;
   bottom: 10%;
@@ -19,13 +57,13 @@ button {
   width: 150px;
   height: 150px;
   border: 0px;
-  cursor: pointer;
   position: relative;
   font-size: 25px;
   padding: 0;
   margin: 0 auto;
   display: block;
   z-index: 5;
+  cursor: none;
 }
 
 .spinner {
@@ -42,4 +80,55 @@ button {
   fill: none;
   stroke: white;
   stroke-width: 4;
+}
+@keyframes MouseDown {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0.75);
+  }
+}
+
+@keyframes MouseUp {
+  from {
+    transform: scale(0.75);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+@keyframes DotExpand {
+  from {
+    background-size: 8px 8px;
+    width: 8px;
+    height: 8px;
+    top: 18px;
+    left: 18px;
+  }
+  to {
+    background-size: 12px 12px;
+    width: 12px;
+    height: 12px;
+    top: 16px;
+    left: 16px;
+  }
+}
+
+@keyframes DotShrink {
+  from {
+    background-size: 12px 12px;
+    width: 12px;
+    height: 12px;
+    top: 16px;
+    left: 16px;
+  }
+  to {
+    background-size: 8px 8px;
+    width: 8px;
+    height: 8px;
+    top: 18px;
+    left: 18px;
+  }
 }
